--- a/www/index.html
+++ b/www/index.html
@@ -18,8 +18,14 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
+
+    <!-- vendor's js -->
+    <script src="lib/localforage/dist/localforage.min.js"></script>
+    <script src="lib/angular-localforage/dist/angular-localForage.min.js"></script>
+
+    <!-- app's js -->
     <script src="js/app.js"></script>
+    <script src="js/storage.js"></script>
     <script src="js/controllers.js"></script>
   </head>
 
